sonar removes and tolist() fixes